[package]
name = "packet_derive"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Evan Schwartzentruber <evandotschwartzentruber@gmail.com>"]
description = "Derive implementation for packet_enum"
exclude = [".github/", ".gitignore", "LICENSE", "README.md", "tests/"]

[lib]
proc-macro = true

[dependencies]
packet_util = "0.1.4"
quote = "1.0.37"
syn = "2.0.85"

[profile.release]
lto = true
codegen-units = 1